opam-version: "1.2"
maintainer: "yallop@gmail.com"
authors: ["Jeremy Yallop"
          "Demi Obenour"
          "Stephane Glondu"
          "Andreas Hauptmann"]
homepage: "https://github.com/ocamllabs/ocaml-integers"
bug-reports: "https://github.com/ocamllabs/ocaml-integers/issues"
dev-repo: "https://github.com/ocamllabs/ocaml-integers.git"
license: "MIT"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
]
