opam-version: "1.2"
maintainer: "yallop@gmail.com"
authors: ["Jeremy Yallop"
          "Demi Obenour"
          "Stephane Glondu"
          "Andreas Hauptmann"]
homepage: "https://github.com/ocamllabs/ocaml-integers"
bug-reports: "https://github.com/ocamllabs/ocaml-integers/issues"
dev-repo: "https://github.com/ocamllabs/ocaml-integers.git"
license: "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune" {build}
]
